# sightseer

./: .dockerignore  .gitignore  Dockerfile  README.md  output.txt  pyproject.toml
app/: main.py
app/spots/: demo.ipynb  main.py  models.py  prompt_utils.py
spots/: demo.ipynb  models.py  prompt_config.py  recommend.py
src/: db_utils.py  main.py  models.py  sightseer.db
src/templates/: home.html
