[tool.poetry]
name = "sightseer"
version = "0.1.0"
description = ""
authors = ["Sam <ssamozturk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.29"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
